--- a/client/componants/GroupsPage/index.html
+++ b/client/componants/GroupsPage/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../libs/bootstrap/css/bootstrap.min.css">
 
-    <title>Home Page</title>
+    <title>Group Page</title>
 </head>
 
 <body>
@@ -17,7 +17,8 @@
             <nav
                 class="menu-top navbar navbar-expand-md bg-7c navbar-dark d-flex justify-content-between row nav-top-menu">
                 <div class="menu-top-left d-flex">
-                    <a class="navbar-brand" href="#"><img src="../../assets/images/logo gapo.svg" alt=""></a>
+                    <a class="navbar-brand" href="../Homepage/index.html"><img src="../../assets/images/logo gapo.svg"
+                            alt=""></a>
                     <form class="form-inline" action="/">
                         <div class="search-btn">
                             <span id="search-btn"><i class="fas fa-search"></i></span>
@@ -73,6 +74,10 @@
                 </div>
             </nav>
         </header>
+        <div class="logogroup col-12 p-0 m-0">
+            <span>Group</span>
+
+        </div>
         <div class="row">
             <div class="col-md-3 col-lg-3 p-0 bg-white">
                 <nav class="navbar navbar-expand-md menu-left d-block align-content-between">
@@ -204,11 +209,11 @@
             <div class="col-md-2 col-lg-3 d-none d-md-block  bg-white">
                 <div class="menu-right">
                     <div class="menu-items">
-                        <p>Tài Khoản: <span>0</span> <img src="../../assets/images/gcoin.svg" alt=""></p>
+                        <p>Tài Khoản: <span>0</span> <img src="../../assets/images/" alt=""></p>
                         <hr class="line">
                     </div>
                     <div class="menu-items">
-                        <p>Danh sách bạn bè</p>
+                        <p>Danh sách thành viên</p>
                         <div class="list-item " id="list-user">
                         </div>
                     </div>
